[gd_scene load_steps=2 format=3 uid="uid://bwnpe16r7li8q"]

[ext_resource type="Script" path="res://scripts/characters/animatronics/animatronic_roaming_fnaf2.gd" id="1_xit2q"]

[node name="toy_freddy" type="Node2D" node_paths=PackedStringArray("movement_timer", "pause_animatronic_timer", "pause_animatronic_timer_cooldown")]
script = ExtResource("1_xit2q")
movement_timer = NodePath("toy_freddy_timer")
cam_path = Array[Array]([["show_stage", "game_area", "hall", "hall_2"]])
pause_animatronic_timer = NodePath("toy_freddy_timer_pause")
pause_animatronic_timer_cooldown = NodePath("toy_freddy_timer_pause_cooldown")
animatronic_name = "toy_freddy"

[node name="toy_freddy_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="toy_freddy_timer_pause" type="Timer" parent="."]
wait_time = 3.0

[node name="toy_freddy_timer_pause_cooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="toy_freddy_timer" to="." method="movement_opportunity"]
[connection signal="timeout" from="toy_freddy_timer_pause" to="." method="pause_animatronic" binds= [false]]
[connection signal="timeout" from="toy_freddy_timer_pause_cooldown" to="." method="set_can_pause" binds= [true]]
